--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "janim[gui]",
+    "janim[gui]>=4.0.0a5",
 ]
 
 [tool.flit.module]
